--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "codeigniter4/framework": "^4.0",
-        "dompdf/dompdf": "^2.0"
+        "codeigniter4/framework": "^4.1",
+        "dompdf/dompdf": "^2.0",
+        "myth/auth": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
